--- a/app/app.yaml
+++ b/app/app.yaml
@@ -15,6 +15,9 @@ handlers:
   script: AppController.py
   login: admin
   
+- url: /api/.*
+  script: apimethods.py
+  
 - url: /.*
   script: AppController.py
   
