--- a/app/index.yaml
+++ b/app/index.yaml
@@ -8,3 +8,8 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: SpeciesIndex
+  properties:
+  - name: names
+  - name: genus
