--- a/app/app.yaml
+++ b/app/app.yaml
@@ -3,6 +3,9 @@ version: 0-1
 runtime: python
 api_version: 1
 
+builtins:
+- datastore_admin: on
+
 handlers:
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
