--- a/app/app.yaml
+++ b/app/app.yaml
@@ -1,4 +1,4 @@
-application: mol-apps
+application: mol-apps                                    g
 version: 0-1
 runtime: python
 api_version: 1
@@ -7,6 +7,10 @@ builtins:
 - datastore_admin: on
 
 handlers:
+- url: /mapreduce(/.*)?
+  script: mapreduce/main.py
+  login: admin
+
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
   login: admin
