added a new kind, TileUpdates to both the loader and the model. We can write to this anytime a tile is added or modified, then a cron can pick those up and run the interpolations to generate tiles of lower resolution

--- a/tileapp/tiles.yaml
+++ b/tileapp/tiles.yaml
@@ -39,3 +39,14 @@ transformers:
       external_name: file
       import_transform: util.toBin(str)
       
+transformers:
+- kind: TileUpdates
+  connector: csv
+  connector_options:
+    encoding: utf_8
+    
+  property_map:      
+    - property: __key__
+      external_name: key
+      export_transform: datastore.Key.name
+      
