--- a/app/app.yaml
+++ b/app/app.yaml
@@ -14,14 +14,18 @@ handlers:
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
   login: admin
- 
-- url: /static
-  static_dir: static
-
+  
 - url: /admin/.*
   script: AppController.py
   login: admin
   
+- url: /cron/.*
+  script: cronmethods.py
+  login: admin
+  
+- url: /static
+  static_dir: static
+
 - url: /api/.*
   script: apimethods.py
   
