--- a/tileapp/tiles.yaml
+++ b/tileapp/tiles.yaml
@@ -22,6 +22,7 @@ python_preamble:
 - import: google.appengine.api.users
 - import: google.appengine.ext.db
 - import: util
+- import: time
 
 
 transformers:
@@ -38,5 +39,19 @@ transformers:
     - property: band
       external_name: file
       import_transform: util.toBin(str)
+      
+- kind: TileUpdates
+  connector: csv
+  connector_options:
+    encoding: utf_8
+    
+  property_map:      
+    - property: __key__
+      external_name: key
+      export_transform: datastore.Key.name
+      
+    - property: when
+      external_name: key
+      export_transform: time.time
       
       
