tile interpolator fully working now, still need to implement a placeholder for completely full tiles

--- a/tileapp/tiles.yaml
+++ b/tileapp/tiles.yaml
@@ -26,7 +26,7 @@ python_preamble:
 
 
 transformers:
-- kind: Tiles
+- kind: Tile
   connector: csv
   connector_options:
     encoding: utf_8
@@ -40,7 +40,7 @@ transformers:
       external_name: file
       import_transform: util.stdImg(db.Blob)
       
-- kind: TileUpdates
+- kind: TileUpdate
   connector: csv
   connector_options:
     encoding: utf_8
