fixing bulkloader, new .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 ##################
 production.ini
 
+# Bulkloader files #
+####################
+colapp/colexport/*.csv
+colapp/bulkloader-log*
+
 # Compiled source #
 ###################
 *.pyc
