--- a/colapp/bulkloaders/new-col.yaml
+++ b/colapp/bulkloaders/new-col.yaml
@@ -21,7 +21,7 @@ python_preamble:
 - import: google.appengine.ext.db
 - import: google.appengine.api.datastore
 - import: google.appengine.api.users
-- import: util
+- import: foo
 
 transformers:
 
@@ -101,7 +101,7 @@ transformers:
     - property: names
       external_name: nameslist
       #import_transform: "lambda x: x is not None and len(x) > 0 and eval(x) or ''"
-      import_transform: util.toList(list)
+      import_transform: foo.toList(list)
       # Type: String Stats: 332308 properties of this type in this kind.
 
     - property: order_
