removed some dull files, added a new type to the speciesindex fixed the bulkloader to reflect the change

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ production.ini
 # Bulkloader files #
 ####################
 colapp/colexport/*.csv
-colapp/bulkloader-log*
+colapp/bulkloader-*
 
 # Compiled source #
 ###################
