--- a/app/app.yaml
+++ b/app/app.yaml
@@ -28,6 +28,13 @@ handlers:
 
 - url: /api/.*
   script: mol/api/__init__.py
+ 
+- url: /layers/.*
+  script: mol/api/__init__.py
+
+- url: /layers
+  script: mol/api/__init__.py
+
   
 - url: /.*
   script: app.py
