Ignoring App Engine bulkloader logs and sqlite dbs

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ production.ini
 ####################
 colapp/colexport/*.csv
 colapp/bulkloader-*
+bulkloader-log*
+bulkloader-progress*
 
 # Compiled source #
 ###################
