Range maps viewable from COL search results

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -29,6 +29,9 @@ handlers:
 - url: /api/.*
   script: mol/api/__init__.py
  
+- url: /rangemap/.*
+  script: mol/api/__init__.py
+
 - url: /layers/.*
   script: mol/api/__init__.py
 
