SpeciesIndex.hasRangeMap added with a mapreduce job to populate it

--- a/app/index.yaml
+++ b/app/index.yaml
@@ -9,6 +9,16 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: Species
+  properties:
+  - name: __key__
+    direction: desc
+
+- kind: SpeciesIndex
+  properties:
+  - name: __key__
+    direction: desc
+
 - kind: SpeciesIndex
   properties:
   - name: names
