Updated app/index.yaml SpeciesIndex with new hasRangeMap property

--- a/app/index.yaml
+++ b/app/index.yaml
@@ -21,6 +21,12 @@ indexes:
 
 - kind: SpeciesIndex
   properties:
+  - name: hasRangeMap
+  - name: names
+  - name: genus
+
+- kind: SpeciesIndex
+  properties:
   - name: names
   - name: genus
 
