Post commit hook implementation for GitHub push notifications via email

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -14,6 +14,9 @@ handlers:
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
   login: admin
+
+- url: /hooks/.*
+  script: app.py
   
 - url: /admin/.*
   script: app.py
