--- a/app/index.yaml
+++ b/app/index.yaml
@@ -9,6 +9,22 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: MultiPolygonIndex
+  properties:
+  - name: term
+  - name: rank
+
+- kind: MultiPolygonIndex
+  properties:
+  - name: term
+  - name: rank
+    direction: desc
+
+- kind: MultiPolygonIndex
+  properties:
+  - name: term=
+  - name: rank
+
 - kind: Species
   properties:
   - name: __key__
