working search api

--- a/app/index.yaml
+++ b/app/index.yaml
@@ -9,6 +9,12 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: MasterSearchIndex
+  properties:
+  - name: term
+  - name: rank
+    direction: desc
+
 - kind: MultiPolygonIndex
   properties:
   - name: term
