--- a/app/mapreduce.yaml
+++ b/app/mapreduce.yaml
@@ -14,6 +14,10 @@ mapreduce:
     params:
     - name: entity_kind
       default: mol.db.MasterSearchIndex
+    - name: shard_count
+      default: 1
+    - name: processing_rate
+      default: 800 
 
 - name: Move Index to MasterSearch
   mapper:
