--- a/layers/development.ini
+++ b/layers/development.ini
@@ -10,6 +10,10 @@ debug = true
 smtp_server = localhost
 error_email_from = paste@localhost
 
+[filter:proxy-prefix]
+use = egg:PasteDeploy#prefix
+prefix = /layers
+
 [server:main]
 use = egg:Paste#http
 host = 127.0.0.1
@@ -18,7 +22,8 @@ port = 5003
 [app:main]
 use = egg:layers
 full_stack = true
-static_files = true
+static_files = truee
+filter-with = proxy-prefix
 
 cache_dir = %(here)s/data
 beaker.session.key = layers
