testable dev.ini

--- a/layers/development.ini
+++ b/layers/development.ini
@@ -22,7 +22,7 @@ port = 5003
 [app:main]
 use = egg:layers
 full_stack = true
-static_files = truee
+static_files = true
 filter-with = proxy-prefix
 
 cache_dir = %(here)s/data
