--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -3,8 +3,8 @@ queue:
   rate: 1/s
   
 - name: tile-processing-queue
-  rate: 40/s
+  rate: 1/s
   retry_parameters:
-    task_retry_limit: 3
-    task_age_limit: 2d
+    task_retry_limit: 1
+    task_age_limit: 15s
   bucket_size: 30
