Added a mapreduce job to change MoL source and MoL Range maps to IUCN instead. Also added a stub metadata script for GBIF points.

--- a/app/index.yaml
+++ b/app/index.yaml
@@ -15,6 +15,11 @@ indexes:
   - name: rank
     direction: desc
 
+- kind: MultiPolygon
+  properties:
+  - name: __key__
+    direction: desc
+
 - kind: MultiPolygonIndex
   properties:
   - name: term
