--- a/workflow/mol-data/config.template.yaml
+++ b/workflow/mol-data/config.template.yaml
@@ -21,7 +21,7 @@ Collections:
   #  
   Required:
     AccessRights:
-    BibliographiCcitation:
+    BibliographiCitation:
     BreedingDomain:
     Contact:
     Coverage:
