--- a/workflow/mol-data/jetz/config.yaml
+++ b/workflow/mol-data/jetz/config.yaml
@@ -2,8 +2,8 @@
 # information.
 # 
 Source:
-  Name: Walter Jetz
-  Email: walter_jetz@yale.com
+  name: walter
+  email: walter.jetz@yale.com
 
 # This section provides information about all collections provided by the 
 # source.
@@ -20,55 +20,53 @@ Collections:
   # Required MOL metadata (http://goo.gl/98r46)
   #  
   Required:
-    AccessRights: Yes
-    BibliographiCcitation: Pending
-    BreedingDomain: Everywhere
-    Contact: Walter
-    Coverage: Global
-    Creator: Walter
-    Date: 2/2/1977
-    Description: Cool range maps
-    Email: walter_jetz@gmail.com
-    EventDate: 2/2/1977
-    LayerType: Range
-    NonBreedingDomain: Nowhere
-    PresenceDefault: True
-    Publisher: Nature
-    SamplingProtocol: Hand Wavey
-    Source: Walter
-    Subject: Hello 
-    TaxonomicCoverage: Global
-    Title: Puma
-    VerbatimSRS: Messy projection
+    accessrights: yes
+    bibliographiccitation: citations
+    breedingdomain: global
+    contact: walter
+    coverage: earth
+    creator: walter
+    date: 2001
+    description: good
+    email: walter.jetz@yale.com
+    eventdate: 2001
+    nonbreedingdomain: nowhere
+    presencedefault: true
+    publisher: yale
+    samplingprotocol: amazing
+    scientificname: puma concolor
+    source: walter lab
+    subject: puma range maps
+    taxonomiccoverage: puma
+    title: cool maps
+    verbatimsrs: unknown
 
   # Optional MoL metadata (http://goo.gl/98r46)
   #
   Optional:
-    Accessright:
-    BaseMaps: []
-    Contributor:
-    EndDateAccuracy:
-    Format:
-    Identifier:
-    Language: 
-    MapCount:
-    MaxRegionsPerSpecies:
-    MaxX:
-    MaxY:
-    MedianRegionsPerSpecies:
-    MinRegionsPerSpecies:
-    MinX:
-    MinY:
-    Relation:
-    Rights:
-    SamplingProtocol:
-    StartDateAccuracy:
-    Taxonomy:
-      PrimaryName:
-      PrimaryUsage:
-      PrimaryVersion:
-      PrimaryYear: 
-    Type:
+    accessright:    
+    basemaps:    
+    contributor:    
+    enddateaccuracy:    
+    format:    
+    identifier:    
+    language:    
+    layertype:    
+    mapcount:    
+    maxregionsperspecies:    
+    maxx:    
+    maxy:    
+    medianregionsperspecies:    
+    minregionsperspecies:    
+    minx:    
+    miny:    
+    relation:    
+    rights:    
+    samplingprotocol:    
+    startdateaccuracy:    
+    surveyintervals:    
+    taxonomy:    
+    type:
 
   # Mappings between collection DBF fields and MoL DBF fields: (http://goo.gl/UkzJW)
   #
@@ -77,33 +75,34 @@ Collections:
     # Required MoL DBF fields 
     #
     Required:
-      PolygonId: OBJECTID
-      AreaId: AREA
-      SpeciesLatin: PERIMETER
-      Source: Shape_Area
+      areaid: OBJECTID
+      bibliographiccitation: AREA
+      polygonid: PERIMETER
+      polygonname: ECO_NAME      
+      scientificname: BIOME
 
     # Optional MoL DBF fields
     #
     Optional:
-      Abundance:
-      AbundanceComment:
-      AbundanceMakeup:
-      AbundanceMethod:
-      AbundanceSurveyArea:
-      AbundanceUnits:
-      DateEnd:
-      DateStart:
-      DistributionComment:
-      MeasurementComment:
-      MeasurementMethod:
-      Seasonality:
-      BibliographicCitation:
-      Contributor:
-      DynamicProperties:
-      EstablishmentMeans:
-      InfraspecificEpithet:
-      OccurrenceStatus:
-      Population:
-      ScientificName:
-      TaxonId:
-      TaxonRemarks:
+      abundance:      
+      abundancecomment:      
+      abundancemakeup:      
+      abundancemethod:      
+      abundancesurveyarea:      
+      abundanceunits:      
+      areaname:      
+      contributor:      
+      dateend:      
+      datestart:      
+      distributioncomment:      
+      dynamicproperties:      
+      establishmentmeans:      
+      infraspecificepithet:      
+      later:      
+      measurementcomment:      
+      measurementmethod:      
+      occurrencestatus:      
+      population:      
+      seasonality:      
+      taxonid:      
+      taxonremarks:
