--- a/workflow/mol-data/config.template.yaml
+++ b/workflow/mol-data/config.template.yaml
@@ -2,8 +2,8 @@
 # information.
 # 
 Source:
-  Name: 
-  Email:
+  name: 
+  email:
 
 # This section provides information about all collections provided by the 
 # source.
@@ -15,61 +15,58 @@ Collections:
 
 # Required directory name of the collection.
 # 
-- DirectoryName: mammals
+- DirectoryName:
    
   # Required MOL metadata (http://goo.gl/98r46)
   #  
   Required:
-    AccessRights:
-    BibliographiCcitation:
-    BreedingDomain:
-    Contact:
-    Coverage:
-    Creator:
-    Date:
-    Description:
-    Email:
-    EventDate:
-    LayerType: 
-    NonBreedingDomain:
-    PresenceDefault:
-    Publisher:
-    SamplingProtocol:
-    ScientificName:
-    Source:
-    Subject:
-    TaxonomicCoverage:
-    Title:
-    VerbatimSRS:
+    accessrights:    
+    bibliographiccitation:    
+    breedingdomain:    
+    contact:    
+    coverage:    
+    creator:    
+    date:    
+    description:    
+    email:    
+    eventdate:    
+    nonbreedingdomain:    
+    presencedefault:    
+    publisher:    
+    samplingprotocol:    
+    scientificname:    
+    source:    
+    subject:    
+    taxonomiccoverage:    
+    title:    
+    verbatimsrs:
 
   # Optional MoL metadata (http://goo.gl/98r46)
   #
   Optional:
-    Accessright:
-    BaseMaps: []
-    Contributor:
-    EndDateAccuracy:
-    Format:
-    Identifier:
-    Language: 
-    MapCount:
-    MaxRegionsPerSpecies:
-    MaxX:
-    MaxY:
-    MedianRegionsPerSpecies:
-    MinRegionsPerSpecies:
-    MinX:
-    MinY:
-    Relation:
-    Rights:
-    SamplingProtocol:
-    StartDateAccuracy:
-    Taxonomy:
-      PrimaryName:
-      PrimaryUsage:
-      PrimaryVersion:
-      PrimaryYear: 
-    Type:
+    accessright:    
+    basemaps:    
+    contributor:    
+    enddateaccuracy:    
+    format:    
+    identifier:    
+    language:    
+    layertype:    
+    mapcount:    
+    maxregionsperspecies:    
+    maxx:    
+    maxy:    
+    medianregionsperspecies:    
+    minregionsperspecies:    
+    minx:    
+    miny:    
+    relation:    
+    rights:    
+    samplingprotocol:    
+    startdateaccuracy:    
+    surveyintervals:    
+    taxonomy:    
+    type:
 
   # Mappings between collection DBF fields and MoL DBF fields: (http://goo.gl/UkzJW)
   #
@@ -78,33 +75,34 @@ Collections:
     # Required MoL DBF fields 
     #
     Required:
-      PolygonId:
-      AreaId:
-      SpeciesLatin:
-      Source:
+      areaid:      
+      bibliographiccitation:      
+      polygonid:      
+      polygonname:      
+      scientificname:
 
     # Optional MoL DBF fields
     #
     Optional:
-      Abundance:
-      AbundanceComment:
-      AbundanceMakeup:
-      AbundanceMethod:
-      AbundanceSurveyArea:
-      AbundanceUnits:
-      DateEnd:
-      DateStart:
-      DistributionComment:
-      MeasurementComment:
-      MeasurementMethod:
-      Seasonality:
-      BibliographicCitation:
-      Contributor:
-      DynamicProperties:
-      EstablishmentMeans:
-      InfraspecificEpithet:
-      OccurrenceStatus:
-      Population:
-      ScientificName:
-      TaxonId:
-      TaxonRemarks:
+      abundance:      
+      abundancecomment:      
+      abundancemakeup:      
+      abundancemethod:      
+      abundancesurveyarea:      
+      abundanceunits:      
+      areaname:      
+      contributor:      
+      dateend:      
+      datestart:      
+      distributioncomment:      
+      dynamicproperties:      
+      establishmentmeans:      
+      infraspecificepithet:      
+      later:      
+      measurementcomment:      
+      measurementmethod:      
+      occurrencestatus:      
+      population:      
+      seasonality:      
+      taxonid:      
+      taxonremarks:
