--- a/workflow/mol-data/jetz/config.yaml
+++ b/workflow/mol-data/jetz/config.yaml
@@ -21,7 +21,7 @@ Collections:
   #  
   Required:
     accessrights: yes
-    bibliographiccitation: citations
+    #bibliographiccitation: citations
     breedingdomain: global
     contact: walter
     coverage: earth
