Property names should be all lower case in the config file.

--- a/workflow/mol-data/config.template.yaml
+++ b/workflow/mol-data/config.template.yaml
@@ -20,7 +20,7 @@ Collections:
   # Required MOL metadata (http://goo.gl/98r46)
   #  
   Required:
-    absenceReliability: 
+    absencereliability: 
     accessrights: 
     bibliographiccitation: 
     breedingdomain: 
