--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -36,6 +36,10 @@ Collections:
     taxonomiccoverage: most 
     title: IUCN Red List of Threatened Species 
     verbatimsrs: +proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs
+    collectionorigin: 6
+    collectionpresence: 6
+    collectionseasonality: 6
+    collectionstartdate: 2010
 
   # Optional MoL metadata (http://goo.gl/98r46)
   #
@@ -96,19 +100,14 @@ Collections:
   # Required MOL metadata (http://goo.gl/98r46)
   #  
   Required:
-    absenceReliability: low
     accessrights: Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en
     bibliographiccitation: IUCN 2010. IUCN Red List of Threatened Species. Version 2010.4. http://www.iucnredlist.org.
-    breedingdomain: all
     contact: IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom
     coverage: global
     creator: IUCN
     date: 2010
     description: This dataset contains distribution information of species assessed for The IUCN Red List of Threatened Species. The maps are developed as part of a comprehensive assessment of global in order to highlight taxa threatened with extinction, and thereby promote their conservation.
     email: redlist@iucn.org
-    eventdate: 1970/2010
-    nonbreedingdomain: all
-    presencedefault: present
     publisher: IUCN
     samplingprotocol: expert opinion
     scientificname: Amphibia
@@ -117,6 +116,10 @@ Collections:
     taxonomiccoverage: most
     title: IUCN Red List of Threatened Species
     verbatimsrs: +proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs
+    collectionorigin: 6
+    collectionpresence: 6
+    collectionseasonality: 6
+    collectionstartdate: 2010
 
   # Optional MoL metadata (http://goo.gl/98r46)
   #
@@ -129,19 +132,10 @@ Collections:
     identifier:  
     language: en 
     layertype: range   
-    mapcount:  
-    maxregionsperspecies:    
-    maxx:    
-    maxy:    
-    medianregionsperspecies:    
-    minregionsperspecies:    
-    minx:    
-    miny:    
     relation:    
     rights:    
     startdateaccuracy:    
     surveyintervals:    
-    taxonomy:    
     type:
 
   # Mappings between collection DBF fields and MoL DBF fields: (http://goo.gl/UkzJW)
@@ -154,8 +148,6 @@ Collections:
     Required:
       areaid: BINOMIAL 
       bibliographiccitation: CITATION 
-      polygonid: OBJECTID 
-      polygonname: BINOMIAL
       scientificname: BINOMIAL
 
     # Optional MoL DBF fields
@@ -175,7 +167,6 @@ Collections:
       dynamicproperties:      
       establishmentmeans: ORIGIN 
       infraspecificepithet: SUBSPECIES
-      later:  
       measurementcomment: 
       measurementmethod:  
       occurrencestatus: PRESENCE
