Modified both config.yaml files to the new spec.

--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -25,6 +25,7 @@ Collections:
     collectionseasonality:  6
     collectionstartdate:    2010
     contact: IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom
+    contributor: John Wieczorek
     coverage:   global
     creator: IUCN 
     date:   2010
@@ -106,6 +107,7 @@ Collections:
     collectionseasonality:  6
     collectionstartdate:    2010
     contact: IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom
+    contributor:            John Wieczorek 
     coverage:   global
     creator: IUCN 
     date:   2010
