Added some Unicode text into one of the standard config.yaml files.

--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -29,7 +29,7 @@ Collections:
     coverage:   global
     creator: IUCN 
     date:   2010
-    description: This dataset contains distribution information of species assessed for The IUCN Red List of Threatened Species. The maps are developed as part of a comprehensive assessment of global in order to highlight taxa threatened with extinction, and thereby promote their conservation.
+    description: This dataset contains distribution information of species assessed for The IUCN Red List of Threatened Speciesª. The maps are developed as part of a comprehensive assessment of global in order to highlight taxa threatened with extinction, and thereby promote their conservation.
     email: redlist@iucn.org 
     publisher:  IUCN
     rights: Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en
