--- a/workflow/mol-data/jetz/config.yaml
+++ b/workflow/mol-data/jetz/config.yaml
@@ -65,6 +65,7 @@ Collections:
     #
     Required:
       areaid: Latin
+      polygonid: Latin
       bibliographiccitation: Citation
       scientificname: Latin
 
