Fiddled with case in DBFMappings a bit more just to make sure that DBF mappings were working correctly.

--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -64,10 +64,10 @@ Collections:
     # Required MoL DBF fields 
     #
     Required:
-      polygonid: BINOMIAL 
-      areaid: BINOMIAL
-      bibliographiccitation: CITATION
-      scientificname: BINOMIAL
+      polygonid: Binomial
+      areaid: Binomial
+      bibliographiccitation: citation
+      scientificname: binomiaL
 
     # Optional MoL DBF fields
     #
