Add frontend server API for point name search by source

--- a/points/app.yaml
+++ b/points/app.yaml
@@ -13,6 +13,9 @@ inbound_services:
 
 handlers:
 
+- url: /frontend/points/.*
+  script: frontend.py
+
 - url: /backend/points/.*
   script: points.py
 
