Add harvest backend.

--- a/points/app.yaml
+++ b/points/app.yaml
@@ -19,6 +19,9 @@ handlers:
 - url: /backend/points/.*
   script: points.py
 
+- url: /backend/harvest
+  script: harvest.py
+
 - url: /_ah/channel/connected/.*
   script: points.py
 
