--- a/points/backends.yaml
+++ b/points/backends.yaml
@@ -1,6 +1,13 @@
 backends:
+
 - name: points
   start: points.py
   class: B2
   instances: 1
-  options: public, dynamic
+  options: dynamic
+
+- name: harvest
+  start: harvest.py
+  class: B2
+  instances: 1
+  options: dynamic
